--- a/Week 2/SA2022_W2.ipynb
+++ b/Week 2/SA2022_W2.ipynb
@@ -32,7 +32,7 @@
         "id": "M0YYLw6N_KCE"
       },
       "source": [
-        "# SA2022 WEEK-2 UNGRADED SOLUTION NOTEBOOK\n",
+        "# SA2022 WEEK-2 NOTEBOOK\n",
         "\n",
         "## Introduction\n",
         "\n",
